# grok-usage-monitor

./: .gitignore  LICENSE  README.md
.github/: release.yml
.github/workflows/: release.yml
docs/: DESIGN.md
docs/screenshots/: 01-usage-main.html  02-accounts.html  03-onboarding.html  04-high-usage.html  05-controls.html  CAPTIONS.md  styles.css
grok-monitor/: README.md  package-lock.json  package.json
grok-monitor/src/: App.css  App.tsx
grok-monitor/src-tauri/: Cargo.toml  tauri.conf.json
grok-monitor/src-tauri/src/: account_manager.rs  auth.rs  lib.rs  main.rs  models.rs  usage_poller.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  store.rs  usage.rs
